Fix Lint GH workflow (#1512)
* Remove ignored branches and increase timeout

* Broader triggers

* Add verbose output

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -2,13 +2,13 @@
 name: Lint
 on:  # yamllint disable-line rule:truthy
   push:
-    branches-ignore:
-      - 'develop'
-      - 'release/**'
+    branches:
+      - '*'
     tags-ignore:
       - 'v*'
     paths:
       - '**.go'
+    pull_request:
   workflow_call: {}
   workflow_dispatch: {}
 
@@ -26,3 +26,5 @@ jobs:
 
       - name: Lint
         uses: golangci/golangci-lint-action@v3
+        with:
+          args: --timeout 10m --verbose
